[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/UnitSelector/UnitSelectorButton.gd" type="Script" id=1]
[ext_resource path="res://Art/UI/LargeButtonHovered.png" type="Texture" id=2]
[ext_resource path="res://Art/UI/LargeButtonUnpressed.png" type="Texture" id=3]
[ext_resource path="res://Art/UI/LargeButtonDisabled.png" type="Texture" id=4]
[ext_resource path="res://Art/UI/LargeButtonPressed.png" type="Texture" id=5]
[ext_resource path="res://Art/UI/BoxWhite.png" type="Texture" id=6]
[ext_resource path="res://Themes/Theme16.tres" type="Theme" id=7]

[node name="UnitSelectorButton" type="TextureButton"]
margin_right = 75.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 4 )
expand = true
stretch_mode = 4
script = ExtResource( 1 )

[node name="UnitNumberBox" type="Sprite" parent="."]
visible = false
position = Vector2( 6, 6 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 6 )

[node name="UnitCostBox" type="Sprite" parent="."]
visible = false
position = Vector2( 62, 6 )
scale = Vector2( 2, 1.25 )
texture = ExtResource( 6 )

[node name="UnitNumber" type="Label" parent="."]
visible = false
anchor_left = 0.053
anchor_top = 0.053
anchor_right = 0.053
anchor_bottom = 0.053
margin_left = -7.975
margin_top = -11.975
margin_right = 12.025
margin_bottom = 12.025
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1

[node name="UnitCost" type="Label" parent="."]
visible = false
anchor_left = 0.053
anchor_top = 0.053
anchor_right = 0.053
anchor_bottom = 0.053
margin_left = 42.025
margin_top = -11.975
margin_right = 74.025
margin_bottom = 12.025
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"
align = 1
valign = 1
